<resources>
    <string name="app_name">shixi2</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_0">0</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mut">*</string>
    <string name="div">/</string>
    <string name="clear">C</string>
    <string name="perCent">%</string>
    <string name="equal">=</string>
    <string name="point">.</string>
    <string name="add_sub">+/-</string>
    <string name="sqrt">√</string>
    <string name="textSize">30dp</string>
</resources>