<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="731dp"
        android:layout_height="413dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/firstNum"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:text="" />

        <TextView
            android:id="@+id/operationText"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:text="" />

        <TextView
            android:id="@+id/secondNum"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="726dp"
            android:layout_height="207dp"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@id/linearLayout4"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="4dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/Button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="clickBUtton"
                    android:text="@string/clear" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:onClick="clickBUtton"
                    android:text="@string/sqrt" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:onClick="clickBUtton"
                    android:text="@string/perCent" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:onClick="clickBUtton"
                    android:text="@string/add" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button9"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:onClick="clickBUtton"
                    android:text="@string/num_7" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:onClick="clickBUtton"
                    android:text="@string/num_8" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"
                    android:onClick="clickBUtton"
                    android:text="@string/num_9" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="clickBUtton"
                    android:text="@string/sub" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="clickBUtton"
                    android:text="@string/num_4" />

                <Button
                    android:id="@+id/button12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="clickBUtton"
                    android:text="@string/num_5" />

                <Button
                    android:id="@+id/button10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="clickBUtton"
                    android:text="@string/num_6" />

                <Button
                    android:id="@+id/button11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="clickBUtton"
                    android:text="@string/mut" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button18"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="clickBUtton"
                    android:text="@string/num_1" />

                <Button
                    android:id="@+id/button17"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="clickBUtton"
                    android:text="@string/num_2" />

                <Button
                    android:id="@+id/button15"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:onClick="clickBUtton"
                    android:text="@string/num_3" />

                <Button
                    android:id="@+id/button16"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:onClick="clickBUtton"
                    android:text="@string/div" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="18dp">

                <Button
                    android:id="@+id/button21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_sub" />

                <Button
                    android:id="@+id/button20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="clickBUtton"
                    android:text="@string/num_0" />

                <Button
                    android:id="@+id/button19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="clickBUtton"
                    android:text="@string/point" />

                <Button
                    android:id="@+id/button14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="clickBUtton"
                    android:text="@string/equal" />
            </TableRow>
        </TableLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>