<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="410dp"
        android:layout_height="289dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/firstNum"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:textSize="30dp"
            android:text="" />

        <TextView
            android:id="@+id/operationText"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:textSize="30dp"
            android:text="" />

        <TextView
            android:id="@+id/secondNum"
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:textSize="30dp"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="389dp"
        android:layout_height="385dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="333dp">

            <Button
                android:id="@+id/button"
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="clickBUtton"
                android:text="@string/clear" />

            <Button
                android:id="@+id/btnSqrt"
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="clickBUtton"
                android:text="@string/sqrt" />

            <Button
                android:id="@+id/btnPerCent"
                android:layout_width="7dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="clickBUtton"
                android:text="@string/perCent" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="9dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="clickBUtton"
                android:text="@string/add" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:onClick="clickBUtton"
                android:text="@string/num_7" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:onClick="clickBUtton"
                android:text="@string/num_8" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:onClick="clickBUtton"
                android:text="@string/num_9" />

            <Button
                android:id="@+id/btnSub"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:onClick="clickBUtton"
                android:text="@string/sub" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:onClick="clickBUtton"
                android:text="@string/num_4" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="61dp"
                android:layout_weight="1"
                android:onClick="clickBUtton"
                android:text="@string/num_5" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:onClick="clickBUtton"
                android:text="@string/num_6" />

            <Button
                android:id="@+id/btnMut"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:onClick="clickBUtton"
                android:text="@string/mut" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btun1"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:onClick="clickBUtton"
                android:text="@string/num_1" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:onClick="clickBUtton"
                android:text="@string/num_2" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:onClick="clickBUtton"
                android:text="@string/num_3" />

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="wrap_content"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:onClick="clickBUtton"
                android:text="@string/div" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAddOrSub"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:text="@string/add_sub" />

            <Button
                android:id="@+id/btnZero"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:onClick="clickBUtton"
                android:text="@string/num_0" />

            <Button
                android:id="@+id/btnPoint"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:onClick="clickBUtton"
                android:text="@string/point" />

            <Button
                android:id="@+id/btnEqual"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:onClick="clickBUtton"
                android:text="@string/equal" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>